add_library(two-sum OBJECT 1-two-sum.h)

add_library(merge-two-sorted-lists OBJECT 21-merge-two-sorted-lists.h)

add_library(maximum-subarray OBJECT 53-maximum-subarray.h)

add_library(climbing-stairs OBJECT 70-climbing-stairs.h)

add_library(best-time-to-buy-and-sell-stock OBJECT
            121-best-time-to-buy-and-sell-stock.h)

add_library(number-of-1-bits OBJECT 191-number-of-1-bits.h)

add_library(contains-duplicate OBJECT 217-contains-duplicate.h)

add_library(counting-bits OBJECT 338-counting-bits.h)

