add_library(two-sum OBJECT 1-two-sum.h)

add_library(merge-two-sorted-lists OBJECT 21-merge-two-sorted-lists.h)

add_library(maximum-subarray OBJECT 53-maximum-subarray.h)

add_library(climbing-stairs OBJECT 70-climbing-stairs.h)
add_library(recursive-climbing-stairs OBJECT 70-recursive-climbing-stairs.h)

add_library(maximum-depth-of-binary-tree OBJECT 104-maximum-depth-of-binary-tree.h)

add_library(best-time-to-buy-and-sell-stock OBJECT 121-best-time-to-buy-and-sell-stock.h)

add_library(linked-list-cycle OBJECT 141-linked-list-cycle.h)

add_library(reverse-bits OBJECT 190-reverse-bits.h)

add_library(number-of-1-bits OBJECT 191-number-of-1-bits.h)

add_library(reverse-linked-list OBJECT 206-reverse-linked-list.h)

add_library(contains-duplicate OBJECT 217-contains-duplicate.h)

add_library(invert-binary-tree OBJECT 226-invert-binary-tree.h)

add_library(closest-binary-tree-value OBJECT 270-closest-binary-tree-value.h)

add_library(counting-bits OBJECT 338-counting-bits.h)

add_library(longest-harmonious-subsequence OBJECT 594-longest-harmonious-subsequence.h)

add_library(rectangle-overlap OBJECT 836-rectangle-overlap.h)
