add_library(median-of-two-sorted-arrays OBJECT
            4-median-of-two-sorted-arrays.h)

add_library(merge-k-sorted-lists OBJECT
            23-merge-k-sorted-lists.h)

add_library(binary-tree-maximum-path-sum OBJECT
            124-binary-tree-maximum-path-sum.h)

add_library(serialize-and-deserialize-binary-tree OBJECT
            297-serialize-and-deserialize-binary-tree.h)
