add_library(add-two-numbers OBJECT
            2-add-two-numbers.h)

add_library(longest-substring-without-repeating-characters OBJECT
            3-longest-substring-without-repeating-characters.h)

add_library(maximum-product-subarray OBJECT 152-maximum-product-subarray.h)

add_library(product-of-array-except-self OBJECT 238-product-of-array-except-self.h)
