add_library(add-two-numbers OBJECT
            2-add-two-numbers.h)

add_library(longest-substring-without-repeating-characters OBJECT
            3-longest-substring-without-repeating-characters.h)

add_library(container-with-most-water OBJECT 11-container-with-most-water.h)

add_library(3sum OBJECT 15-3sum.h)

add_library(letter-combinations-of-a-phone-number OBJECT 17-letter-combinations-of-a-phone-number.h)

add_library(search-in-rotated-sorted-array OBJECT 33-search-in-rotated-sorted-array.h)

add_library(insert-interval OBJECT 57-insert-interval.h)

add_library(unique-paths OBJECT 62-unique-paths.h)
add_library(iterative-unique-paths OBJECT 62-iterative-unique-paths.h)

add_library(clone-graph OBJECT 133-clone-graph.h)

add_library(maximum-product-subarray OBJECT 152-maximum-product-subarray.h)

add_library(find-minimum-in-rotated-sorted-array OBJECT 153-find-minimum-in-rotated-sorted-array.h)
add_library(recursive-find-minimum-in-rotated-sorted-array OBJECT 153-recursive-find-minimum-in-rotated-sorted-array.h)

add_library(number-of-islands OBJECT 200-number-of-islands.h)

add_library(product-of-array-except-self OBJECT 238-product-of-array-except-self.h)

add_library(sum-of-two-integers OBJECT 371-sum-of-two-integers.h)

add_library(coin-change OBJECT 322-coin-change.h)
add_library(recursive-coin-change OBJECT 322-recursive-coin-change.h)
